# connectedhomeip

./: .gitmodules  .gn  .restyled.yaml  BUILD.gn  JF_Fixes.patch  PAF_DOS_FIX_NOTWORKING.patch  README.md  admin_storage_poc.json  crash-6aab67de79f995c759ea408b70f57ceca85d2e2d  default.profraw  kvs1  kvs_poc  run_fuzztest_click.py
.github/workflows/: build.yaml  codeql.yml  examples-esp32.yaml  nightly.yaml  su_tests.yaml  tests.yaml
allure-report/: index.html
allure-report/15/: index.html
allure-report/15/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/15/export/: influxDbData.txt  prometheusData.txt
allure-report/15/history/: retry-trend.json
allure-report/15/widgets/: duration-trend.json  duration.json  executors.json  summary.json
allure-report/16/: index.html
allure-report/16/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/16/export/: influxDbData.txt  prometheusData.txt
allure-report/16/history/: categories-trend.json  history-trend.json  history.json
allure-report/16/widgets/: duration-trend.json  executors.json  retry-trend.json  status-chart.json  summary.json
allure-report/17/: index.html
allure-report/17/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/17/export/: influxDbData.txt  prometheusData.txt
allure-report/17/history/: duration-trend.json  history.json  retry-trend.json
allure-report/18/: index.html
allure-report/20/: index.html
allure-report/21/: index.html
allure-report/22/: index.html
allure-report/23/: index.html
allure-report/24/: index.html
allure-report/25/: index.html
allure-report/27/: index.html
allure-report/28/: index.html
allure-report/29/: index.html
allure-report/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: categories-trend.json  history-trend.json  history.json
allure-report/last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
allure-report/nightly/: index.html
allure-report/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  suites.json  summary.json
docs/: agent-sandbox.md  best-practices.md  customizing.md  daily_pass_percentage.md  other-use-cases.md  patching.md  pipeline.md  prompting.md  security.md  threat-model.md  triage.md  troubleshooting.md
docs/guides/: python_chip_controller_building.md
harness/: README.md
scripts/: build_coverage.sh  setup_sandbox.sh
scripts/helpers/: restyle-diff.sh
scripts/tests/: btp_window_underflow_peripheral_repro.py  btp_window_underflow_repro.py  run_fuzztest_coverage.py  wifipaf_malformed_cap_repro.py  wifipaf_publish_cancel_dos_check.py
src/app/: InteractionModelEngine.cpp  WriteHandler.cpp
src/app/MessageDef/tests/: BUILD.gn  FuzzImBuildingBlocks.cpp  FuzzImMessageParsers.cpp  FuzzImMessageParsersPW.cpp
src/app/clusters/thermostat-server/tests/: BUILD.gn  FuzzThermostatPW.cpp
src/controller/: AbstractDnssdDiscoveryController.cpp  SetUpCodePairer.cpp
src/crypto/: CHIPCryptoPALOpenSSL.cpp
src/python_testing/: TC_ACL_2_6.py  TC_AccessChecker.py  TC_JF_PoC.py  TC_OPCREDS_3_1.py  TC_PAVST_MotionSensitivityNull_PoC.py  TC_PAVST_MotionZonesNull_PoC.py  TC_SU_2_5.py  TC_SU_2_7.py  TestRevokeCommissioningClearsPASE.py  test_metadata.yaml
src/setup_payload/: AdditionalDataPayloadParser.h  SetupPayload.cpp
targets/connectedhomeip-mdns/: Dockerfile  README.md  config.yaml
targets/connectedhomeip-mdns-resolver/: Dockerfile  config.yaml
targets/connectedhomeip-mdns-txt/: Dockerfile  config.yaml
(+594 files in other folders)
