# Copyright (c) 2026 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

import("${chip_root}/build/chip/fuzz_test.gni")

if (enable_fuzz_test_targets) {
  chip_fuzz_target("fuzz-im-message-parsers") {
    sources = [ "FuzzImMessageParsers.cpp" ]
    public_configs = [ "${chip_root}/src:includes" ]
    public_deps = [
      "${chip_root}/src/app/MessageDef",
      "${chip_root}/src/lib/core",
      "${chip_root}/src/lib/core:error",
      "${chip_root}/src/platform/logging:default",
    ]
  }
  chip_fuzz_target("fuzz-im-building-blocks") {
    sources = [ "FuzzImBuildingBlocks.cpp" ]
    public_configs = [ "${chip_root}/src:includes" ]
    public_deps = [
      "${chip_root}/src/app/MessageDef",
      "${chip_root}/src/lib/core",
      "${chip_root}/src/lib/core:error",
      "${chip_root}/src/platform/logging:default",
    ]
  }
}

if (pw_enable_fuzz_test_targets) {
  chip_pw_fuzz_target("fuzz-im-message-parsers-pw") {
    test_source = [ "FuzzImMessageParsersPW.cpp" ]
    configs = [ "${chip_root}/src:includes" ]
    public_deps = [
      "${chip_root}/src/app/MessageDef",
      "${chip_root}/src/lib/core",
      "${chip_root}/src/lib/core:error",
      "${chip_root}/src/platform/logging:default",
    ]
  }
}
