# Copyright (c) 2026 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")

import("${chip_root}/build/chip/fuzz_test.gni")

if (pw_enable_fuzz_test_targets) {
  # One Thermostat fuzz binary holding all Thermostat FUZZ_TESTs:
  #   ThermostatPresets.PresetOwnedMemberLifetime (owned-member lifetime path) and
  #   Thermostat.CommandDecode / Thermostat.StructDecode (schedule/atomic decode).
  # chip_pw_fuzz_target sets `sources = invoker.test_source`, so the class under test
  # (PresetStructWithOwnedMembers -- thermostat-server's source_set has empty sources; real
  # sources flow through chip_data_model.gni codegen) is listed alongside the harness here.
  chip_pw_fuzz_target("fuzz-thermostat-pw") {
    test_source = [
      "FuzzThermostatPW.cpp",
      "${chip_root}/src/app/clusters/thermostat-server/PresetStructWithOwnedMembers.cpp",
    ]
    public_deps = [
      "${chip_root}/src/app/common:cluster-objects",
      "${chip_root}/src/app/util/mock:mock_codegen_data_model",
      "${chip_root}/src/lib/core",
      "${chip_root}/src/lib/support",
      "${chip_root}/src/platform/logging:default",
      "${chip_root}/src/protocols",
      "${chip_root}/zzz_generated/app-common/clusters/Thermostat",
    ]
  }
}
